--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/all.css" />
     <link
       rel="stylesheet"
-      href="node_modules/@flaticon/flaticon-uicons/css/all/all.css"
+      href="./node_modules/@flaticon/flaticon-uicons/css/all/all.css"
     />
   </head>
   <body>
