--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>CSS 案例集锦</title>
 
     <link rel="stylesheet" href="./css/all.css" />
-    <link
-      rel="stylesheet"
-      href="./node_modules/@flaticon/flaticon-uicons/css/all/all.css"
-    />
+    <link rel="stylesheet" href="./css/flaticon/all/all.css" />
   </head>
   <body>
     <div class="sidebar">
